# Syrus2026_Snack_overflow

./: .env.example  .gitignore  README (1).md  README.md  compose.yaml  pyproject.toml
.chainlit/: config.toml
.files/07ca0aba-1900-4243-af24-090433f15d01/: d2609b81-bb6b-4fa2-9c00-65b465424391.json
.files/51531f42-7a9a-4770-b389-9481494b9051/: 03d466da-443c-4fc5-8fe0-61273c648e6a.json  93906746-0dd6-4fc2-824e-fcbcc22a9de6.json  f1399afa-771c-4dfb-9f49-68b3cbca3503.json
.files/71d56899-26aa-4ee2-bcea-8d99589a474b/: cd6e2aa5-209d-4344-b01b-bbc1f36b04af.json
.files/abe2cce9-0900-4c6e-97b1-314ef8293c97/: ff42110b-7dee-4890-bb60-5b6f2cdbd337.json
.files/e4e0e4dd-d857-4926-8b40-4366ab900473/: dbb616fe-2ff2-4289-aacf-e7c6c66ba9d7.json
datset/: README.md  architecture_documentation.md  email_templates.md  gitmodules.txt  guidelines.md  onboarding_checklists.md  onboarding_faq.md  setup_guides.md  starter_tickets.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatFeed.jsx  ChatFeed.module.css  ChatInput.jsx  ChatInput.module.css  ChecklistModal.jsx  (+11 more)
public/: onboardai.css
public/elements/: OnboardingDashboard.jsx
src/onboardai/: __init__.py  api.py  app.py  config.py  doctor.py  graph.py  llm_backend.py  local_llm.py  models.py  seed_jira.py  state.py
tests/: conftest.py  test_computer_use.py  test_engine_and_reports.py  test_integrations.py  test_langgraph.py  test_llm_backend.py  test_persona_and_planner.py  test_retrieval.py  test_setup_guides.py  test_state.py
(+25 files in other folders)
